--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /client/node_modules
-/server/node_modules
+
+/node_modules
 /.pnp
 .pnp.js
 
@@ -10,7 +11,7 @@
 /coverage
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
