--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "postinstall": "cd client && npm run build"
+    "postinstall": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
